<resources>
    <string name="app_name">Merradia</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="mkchar">Make Characters</string>
    <string name="editchar">Edit Characters</string>
    <string name="fight">Fight</string>
    <string name="agi">Agility/Move</string>
    <string name="str">Strength</string>
    <string name="con">Constitution</string>
    <string name="def">Defence</string>
    <string name="ref">Reflex</string>
    <string name="craftweapon">Craft a weapon for me</string>
    <string name="craftarmor">Craft a armore for me</string>
    <string name="craftmarmor">Craft a magice armore for me</string>
    <string name="luck">Luck</string>
    <string name="dex">Dexterity</string>
    <string name="trainer">Trainer</string>
    <string name="armorer">Armorer</string>
    <string name="blacksmith">Blacksmith</string>
    <string name="ac">Defence Value</string>
    <string name="mc">Magic Defence</string>
    <string name="inte">Intelligent</string>
    <string name="move">Evade</string>
    <string name="attack">Hit!</string>
    <string name="admob_id">ca-app-pub-7036765120364615/6159648359</string>
    <string name="admob_id2">ca-app-pub-7036765120364615~2433948347</string>
    <string name="admob_id1">ca-app-pub-3940256099942544/5224354917</string>
    <string name="magice">Special Attack</string>
    <string name="dmg">Damage</string>
    <string name="save">Save</string>
    <string name="names">Name</string>
    <string name="Lvl">LVL</string>
    <string name="enemyMove">Something is moving in the maze!</string>
    <string name="sense2">You hear something, the monster might be close!</string>
    <string name="sense3">You can feel the wind is coming from somewhere, might be a trap? </string>
    <string name="sense4">Thanks to your high skills, you can feel the treasure is somewhere near.</string>
    <string name="charakter">Character</string>
    <string name="empty1">Empty</string>
    <string name="empty2">None</string>
    <string name="edit_char">Select</string>
    <string name="select_char">Edit Charakter</string>
    <string name="delete_char">Delete</string>
    <string name="hp">Health Points</string>
    <string name="mana">Mana points</string>
    <string name="chous">Please select a character</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="wiz_select">Wizard Selected</string>
    <string name="ork_select">Orc selected</string>
    <string name="knigt_select">Knight selected</string>
    <string name="archer_select">Archer selected</string>
    <string name="rouge_select">Rouge selected</string>
    <string name="no_point">Sorry, you do not have any skillpoints left.</string>
    <string name="no_point1">Sorry, your skillpoints can not be less than 0.</string>
    <string name="no_kaszt">Please select a character.</string>
    <string name="no_name">Please give your character a name.</string>
    <string name="action_sign_in">Register and Sign In</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">The password is too short</string>
    <string name="error_incorrect_password">The password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="you_turn">Your Turn!</string>
    <string name="you_heal">Your Heal your self </string>
    <string name="you_cast_magice">Your special attack deal dmg: </string>
    <string name="enemy_heal">Enemy heal him self </string>
    <string name="chesFound">You found a chest! You get:</string>
    <string name="trappFound">Oh no it is a trap!</string>
    <string name="youArDeath">You HP is under 0, your character is dead.</string>
    <string name="trappAvoid">Thanks to your reflex, you escaped the trap!</string>
    <string name="trappHit">The trap close to you: </string>
    <string name="next_to">Unfortunately, you ran to the side.</string>
    <string name="next_toe">Thanks to your luck the enemy ran to the side.</string>
    <string name="you_hit">You got your opponent.</string>
    <string name="enemy_hit">The opponent hit you.</string>
    <string name="you_win">Congratulation! You defeated the opponent.</string>
    <string name="you_lose">You lost, your character is dead.</string>
    <string name="seller1">Welcome dear friend, you can buy from me potions, that chang you atributes, but be care full! Some of then make the opposite effect. 100 Trefu/potion.</string>
    <string name="seller2">Welcome dear friend, I can craft a weapon for you, that chang you dmg, but be care full! I am a bit clumsy and you have opposite effect. 500 Trefu/craft.</string>
    <string name="seller3">Welcome dear friend, I can craft a armore for you, that chang you Deffens, but be care full! I am a bit clumsy and you have opposite effect. 500 Trefu/craft.</string>
    <string name="low_mana">Your mana is to low!</string>
    <string name="reward">Watch video to get reward</string>
    <string name="no_money">Your dont have enugh money for this action!</string>
    <string name="reward_get">You received</string>
    <string name="reward_Button">Your reward video is ready to watch</string>
    <string name="lvlup">LVL up!</string>
    <string name="select_magice">Please select some special attack</string>
    <string name="welcome_main">Welcome dear </string>
    <string name="welcome_fightfield">Welcome to the maze,try to find the monster, ther hiding shomwhere, but bee carefull,everithing is full of traps</string>
    <string name="welcome_battle">Com lets kill this thing!</string>
    <string name="Select_Magice">Select Magice!</string>
    <string name="and_do">and do</string>
    <string name="you_get"> you get </string>
    <string name="Trefuand"> Trefu and </string>
    <string name="lvlupmsg">  LVL UP! you get 5 point skillpoint </string>
    <string name="maxheal">  You ar at full healt</string>
    <string name="buyit">  Sorry the free version allow you to train charakter to lvl 3, please buy the full app.</string>
    <string name="howto">  How to use this game</string>
    <string name="youhave">You have</string>
</resources>
